# PancakeCNC

./: .gitignore  .gitlab-ci.yml  README.md  run_file_designer.py  telemetrybudget.md
ControllerPCB/: BoardBom.htlm  ControllerPCB.kicad_pcb  ControllerPCB.kicad_prl  ControllerPCB.kicad_pro  ControllerPCB.kicad_sch
DesignDocs/: BillOfMaterials.md  Channelization.md  DesignDiagrams.drawio  MotorControlReusePlan.md
GroundStation/: CommandTerminal.py  VisualizeRunFile.py
PancakeSim/: KinematicTestBed.m
Pancake_esp/: .clang-format  .gitignore  CMakeLists.txt  CommandTerminal.py  CommandTerminalV2.py  PumpFlowTest.txt  README.md  SmileyFace.txt  TestProgram.txt  sdkconfig
Pancake_esp/main/: AngleMotion.cpp  AngleMotion.h  ArcGuidance.h  ArchimedeanSpiral.cpp  ArchimedeanSpiral.h  CMakeLists.txt  CNCOpCodes.h  CommandHandler.cpp  CommandHandler.h  CrashDebug.cpp  CrashDebug.h  DataModel.h  GPIOAssignments.h  GeneralGuidance.h  GoToAngleGuidance.h  GuidanceRegistry.h  HomingController.cpp  HomingController.h  InfluxDBCmdAndTlm.cpp  InfluxDBCmdAndTlm.h  InfluxDBParser.cpp  InfluxDBParser.h  JogGuidance.h  KnownIssues.md  MotionSafety.cpp  MotionSafety.h  MotorCommandRouter.h  MotorControl.cpp  MotorControl.h  MotorControlState.h  PanMath.cpp  PanMath.h  PiUI.c  PiUI.h  RectangleGuidance.h  Safety.c  Safety.h  Secret.h.example  SerialParser.cpp  SerialParser.h  (+17 more)
PiUI/: PiUI.py
PrintedParts/: .gitattributes  PumpBase.stl  PumpSpinner.stl  PumpTop.stl
Tests/: AngleMotionTest.cpp  ArchimedeanSpiralTest.cpp  GoToAngleGuidanceTest.cpp  GuidanceRegistryTest.cpp  (+7 more)
(+57 files in other folders)
