idf_component_register(SRCS "StepperMotor.cpp"
 "ArchimedeanSpiral.cpp"
 "SerialParser.cpp"
 "Vector2D.cpp"
 "pancake_esp_main.cpp"
 "InfluxDBParser.cpp"
# "Safety.c"
 "MotorControl.cpp"
 "CommandHandler.cpp"
 "PiUI.c"
 #"UI.c"
 "PanMath.cpp"
 "WifiHandler.cpp"
 "InfluxDBCmdAndTlm.cpp"
 INCLUDE_DIRS ".")
