idf_component_register(SRCS "StepperMotor.cpp"
 "AngleMotion.cpp"
 "CrashDebug.cpp"
 "HomingController.cpp"
 "ArchimedeanSpiral.cpp"
 "Vector2D.cpp"
 "pancake_esp_main.cpp"
 "InfluxDBParser.cpp"
 "MotionSafety.cpp"
 "Safety.c"
 "MotorControl.cpp"
 "CommandHandler.cpp"
 "Telemetry.c"
 #"UI.c"
 "PanMath.cpp"
 "WifiHandler.cpp"
 "InfluxDBCmdAndTlm.cpp"
 INCLUDE_DIRS ".")
